# riichi-toolbox

./: .eslintrc.js  .eslintrc.json  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  test.json  vite.config.ts
.github/workflows/: crowdin.yml
calculator_rs/: Cargo.toml
calculator_rs/src/: lib.rs
lang/: en.json  zh.json
pages/: _app.tsx  _document.tsx  cheatsheet.tsx  index.tsx  others.tsx  test.tsx
pages/more/: index.tsx  info.tsx
pages/others/: index.tsx
src/: App.tsx  AppTypes.ts  MahjongTile.tsx  MahjongTiles.tsx  Others.tsx  main.tsx
src/components/: Cheatsheet.tsx  Home.tsx  MahjongTile.tsx  MahjongTileItem.tsx  MyAppBar.tsx  Others.tsx  SettingsContainer.tsx  Title.tsx
src/components/Cheatsheet/: Fu.tsx  Yaku.tsx  index.tsx  yakus.json
src/components/Mahjong/: DoubleTile.tsx  Hand.tsx  Open.tsx  Tile.tsx  index.tsx  utils.ts
src/components/Settings/: Dialogue.tsx  Entry.tsx  SettingsContainer.tsx
src/components/layout/: AppLayout.tsx  AppToolBar.tsx
src/pages/: cheatsheet.tsx  home.tsx  router.tsx
src/pages/calculator/: discard.tsx  index.tsx
src/pages/calculator/calculator_rs/: Cargo.toml
src/pages/calculator/calculator_rs/src/: lib.rs
src/pages/more/: about.tsx  index.tsx  info.attribution.tsx  info.tsx  settings.tsx
src/providers/: AppContext.tsx  AppProvider.tsx
styles/: globals.css
