[package]
name = "calculator_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
yaku_checker = { git = "https://github.com/Direktor799/yaku_checker" }
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"
